--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,8 @@ board = esp12e
 framework = arduino
 upload_speed = 115200
 monitor_speed = 115200
+upload_protocol = espota
+upload_port = 192.168.2.242
 
 lib_deps =
     AccelStepper
